--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 
 <h1>Home</h1>
 
-<div class="">
+<div class="home">
     <p> <%= homeContent %> </p><br>
     <% postArray.forEach(function(post) { %>
       <h3><%= post.title %></h3><br>
